--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,6 +23,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="index_p">
+                            <a href="/chat?nickname=<%= current_user.email %>">채팅시작</a>
                             <h1>혼자이면서 함께하는 여행</h1>
                             <h4>당신이 원하는 당신만의 가이드와 함께 더 풍부한 여행을 경험해 보세요.</h4>
                         </div>
