--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,20 +61,23 @@
                     <ul class="grid">
                         <li class="item">
                             <div class="box">
-                                <img src="../assets/images/guide1.jpg" alt="" />
-                                <h2>Tree house</h2>
+                                <%= link_to image_tag("guide1.jpg") %>
+                                <h3>Wayne Rooney</h3>
+                                <h4>London</h4>
                             </div>
                         </li>
                         <li class="item">
                             <div class="box">
-                                <img src="" alt="" />
-                                <h2>Furniture</h2>
+                                <%= link_to image_tag("guide2.jpg") %>
+                                <h3>Adele</h3>
+                                <h4>Prague</h4>
                             </div>
                         </li>
                         <li class="item">
                             <div class="box">
-                                <img src="" alt="" />
-                                <h2>Wave woods</h2>
+                                <%= link_to image_tag("guide3.jpg") %>
+                                <h3>Olivie Jiroud</h3>
+                                <h4>Paris</h4>
                             </div>
                         </li>
                      </ul>
