--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,12 @@
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
-
+  
+  <div class="field">
+  <p><%= f.label :username %><br />
+  <%= f.text_field :username %></p>
+  </div>
+  
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
@@ -15,12 +20,26 @@
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
-
+  
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+  
+  <div class="field">
+  <p><%= f.label :phone %><br />
+  <%= f.text_field :phone %></p>
+  </div>
+  
+  <div class="field">
+   <p><%= f.label :gender %><br />
+   <p><%= f.select :gender, options_for_select(["Select One", "Male", "Female"],:disabled => ["Select One"]), :class => 'genForm_dropBox' %>
+   </p>
+  </div>
+  
+  
 
+  
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
