--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
 <body>
   <%= yield %>
   <footer>
-    
+    <div class="footer_wrapper">
+      <div class="footer">
+        <h3>© Likelion 2016</h3>
+      </div>
+    </div>
   </footer>
 
 </body>
