--- a/app/views/home/chat.erb
+++ b/app/views/home/chat.erb
@@ -4,36 +4,36 @@
   <div class="sample-body">
 
     <!-- left nav -->
-    <!--<div class="left-nav">-->
-    <!--  <div class="left-nav-channel-select">-->
-    <!--    <button type="button" class="left-nav-button left-nav-open" id="btn_open_chat">-->
-    <!--      오픈채팅-->
-    <!--      <div class="left-nav-button-guide"></div>-->
-    <!--    </button>-->
-    <!--    <button type="button" class="left-nav-button left-nav-messaging" id="btn_messaging_chat">-->
-    <!--      1:1 채팅-->
-    <!--      <div class="left-nav-button-guide"></div>-->
-    <!--    </button>-->
-    <!--  </div>-->
+    <div class="left-nav">
+      <div class="left-nav-channel-select">
+        <button type="button" class="left-nav-button left-nav-open" id="btn_open_chat">
+          오픈채팅
+          <div class="left-nav-button-guide"></div>
+        </button>
+        <button type="button" class="left-nav-button left-nav-messaging" id="btn_messaging_chat">
+          1:1 채팅
+          <div class="left-nav-button-guide"></div>
+        </button>
+      </div>
 
-    <!--  <div class="left-nav-channel-section">-->
-    <!--    <div class="left-nav-channel-title">오픈채팅</div>-->
-    <!--    <div class="left-nav-channel-empty">오픈 채팅을 시작하세요</div>-->
-    <!--    <div id="open_channel_list"></div>-->
+      <div class="left-nav-channel-section">
+        <div class="left-nav-channel-title">오픈채팅</div>
+        <div class="left-nav-channel-empty">오픈 채팅을 시작하세요</div>
+        <div id="open_channel_list"></div>
 
-    <!--    <div class="left-nav-channel-title title-messaging">1:1 채팅</div>-->
-    <!--    <div id="messaging_channel_list"></div>-->
-    <!--  </div>-->
+        <div class="left-nav-channel-title title-messaging">1:1 채팅</div>
+        <div id="messaging_channel_list"></div>
+      </div>
 
-    <!--  <div class="left-nav-user">-->
-    <!--    <div class="left-nav-user left-nav-user-icon"></div>-->
-    <!--    <div class="left-nav-user left-nav-login-user">-->
-    <!--      <div class="left-nav-user left-nav-user-title">username</div>-->
-    <!--      <div class="left-nav-user left-nav-user-nickname"></div>-->
-    <!--    </div>-->
-    <!--  </div>-->
+      <div class="left-nav-user">
+        <div class="left-nav-user left-nav-user-icon"></div>
+        <div class="left-nav-user left-nav-login-user">
+          <div class="left-nav-user left-nav-user-title">username</div>
+          <div class="left-nav-user left-nav-user-nickname"></div>
+        </div>
+      </div>
 
-    <!--</div> -->
+    </div> 
     <!-- // end left nav -->
 
 
@@ -43,33 +43,31 @@
       <div class="right-section__modal-bg"></div>
 
       <!-- top -->
-      <!--<div class="chat-top">-->
-      <!--  <div class="chat-top__title"></div>-->
-      <!--  <div class="chat-top-button">-->
+      <div class="chat-top">
+        <div class="chat-top__title"></div>
+        <div class="chat-top-button">
 
-      <!--    <div class="chat-top__button chat-top__button-invite">초대</div>-->
-      <!--    <div class="modal-guide-user">-->
-      <!--      유저 리스트-->
-      <!--    </div>-->
+          <div class="chat-top__button chat-top__button-invite">초대</div>
+          <div class="modal-guide-user">
+            유저 리스트
+          </div>
 
-      <!--    <div class="chat-top__button chat-top__button-member"></div>-->
-      <!--    <div class="modal-guide-member">-->
-      <!--      접속 중인 유저-->
-      <!--    </div>-->
+          <div class="chat-top__button chat-top__button-member"></div>
+          <div class="modal-guide-member">
+            접속 중인 유저
+          </div>
 
-      <!--    <div class="chat-top__button chat-top__button-leave"></div>-->
-      <!--    <div class="modal-guide-leave">-->
-      <!--      나가기-->
-      <!--    </div>-->
+          <div class="chat-top__button chat-top__button-leave"></div>
+          <div class="modal-guide-leave">
+            나가기
+          </div>
 
-      <!--  </div>-->
-      <!--</div>-->
+        </div>
+      </div>
 
       <!-- channel empty -->
       <div class="chat-empty">
-        <div class="chat-empty chat-empty__tile">345채팅을 시작하세요</div>
-        <button type="button" class="modal-messaging-bottom__button" onclick="startMessaging()">아자아자 화이팅</button>
-
+        <div class="chat-empty chat-empty__tile">채팅을 시작하세요</div>
       </div>
 
       <!-- chat -->
