--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
                         <ul class="menu">
                             <li class="service"><a href="">서비스</a></li>
                             <li><a>도움말</a></li>
-                            <li><a>안녕하세요! <%= @user.username %>님</a></li>
+                            <li><a href="/mypage">안녕하세요! <%= @user.username %>님</a></li>
                         </ul>
                     </nav>
                 </div>
