ADD MAKING MEETING

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -115,7 +115,7 @@
             <div class="comm_section">
                 <h2>언제 어디서나 사람들과 함께하세요</h2>
                 <h4>커뮤니티에서 당신의 여행담을 마음껏 나누고 자랑하세요.</h4>
-                <a href="">
+                <a href="meeting/index">
                    <button type="button" class="btn btn-primary btn-lg comm_button">커뮤니티 찾기</button>
                 </a>
             </div>
