--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,6 +15,9 @@
                             <li class="service"><a href="/service">서비스</a></li>
                             <li><a>도움말</a></li>
                             <li><a href="/mypage">안녕하세요! <%= @user.username %>님</a></li>
+                            <% if @user.grade != 1 %>
+                            <li><a href="/admin">관리자 페이지</a></li>
+                            <% end %>
                         </ul>
                     </nav>
                 </div>
@@ -37,12 +40,11 @@
             <form>
                 <div class="form-group search_input container">
                     <div class='row'>
-                        <input list="test" class="form-control city" id="search" placeholder="나라 혹은 도시">
+                        <input list="test" class="form-control city" id="search" placeholder="나라 혹은 도시" autocomplete="off">
                         <datalist id="test">
-                            <option value="런던">
-                            <option value="서울">
-                            <option value="오리건">
-                            <option value="뉴욕">
+                            <% @region.each do |x| %>
+                                <option value="<%= x.region %>">
+                            <% end %>
                         </datalist>
                         <input type="text" class="form-control calendar" placeholder="달력">
                         <button class="form-control button">
