--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,23 +105,29 @@
   margin: 30px 30px 30px 0px;
  }
  
- .menu {
+ .menu_home, .menu_search_list {
   overflow : hidden;
   position : absolute;
   right : 0px;
  } 
  
- .menu li {
+ .menu_home li , .menu_search_list li {
   float : left;
   margin-left : 60px;
 
  }
  
- .menu li a {
+ .menu_home li a {
   padding : 10px;
   display : block;
 
   color : white;
+ }
+ 
+ .menu_search_list li a {
+  padding : 10px;
+  display : block;
+  color :black;
  }
  
  .menu_space {
