--- a/app/views/home/search_list.html.erb
+++ b/app/views/home/search_list.html.erb
@@ -49,14 +49,15 @@
                 <h2>완벽한 여행을 책임질 추천 가이드</h2>
                 <h4>뛰어난 가이드들이 여러분을 기다리고 있습니다.</h4>
                 <ul class="guide_grid">
-                    <% @searched_mentor.recent(6).each do |p| %>
-                        <li class="item">
-                            <div class="box">
-                                <!--<%= link_to image_tag("") %> 승윤이형 부탁합니다-->
-                                <h3>p.username</h3>
-                                <h4>p.region</h4>
-                            </div>
-                        </li>
+                    <% @all.each do |p| %>
+                        <% if @user_region == p.region %>
+                            <li class="item">
+                                <div class="box">
+                                    <h3><%= p.username %></h3>
+                                    <h4><%= p.region %></h4>
+                                </div>
+                            </li>
+                        <% end %>
                     <% end %>
                 </ul>
             </div>
