--- a/app/views/home/enroll_mentor.erb
+++ b/app/views/home/enroll_mentor.erb
@@ -4,7 +4,7 @@
      <div class="row"> 
        <div class="col-md-12">
          <div class="col-md-8 col-md-offset-2">
-             <h2> <center> <br> <b> trip service 멘토 등록 </b> </center> </h2>
+             <h2> <center> <br> trip service 멘토 등록 </center> </h2>
              <h3> <center> trip service의 멘토가 되어 여행자들과 생생한 팁을 공유하세요! </center> </h3>
              <br>
              <div class="panel panel-default">
