--- a/app/views/home/mypage.html.erb
+++ b/app/views/home/mypage.html.erb
@@ -5,3 +5,78 @@
         </div>    
     </section>
 </article>
+
+<div style="background-color:#FAFAFA">
+<div class="body"> 
+   <div class = "container" > 
+     <div class="row"> 
+       <div class="col-md-12">
+         <div class="col-md-8 col-md-offset-2">
+             <h2> <br> MY PAGE </h2>
+             <br>
+             <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="col-md-4">
+                        <img class="img-responsive" alt="a" src="http://presentationvoice.com/wp-content/uploads/2014/03/Photo-March-Issue_Facebook--1024x1024.jpg" style="width:200px;">
+                    </div>
+                    <br> <br>
+                        <p> <b> E-mail </b> <%= @user.email %> </p>
+                        <p> <b> Username </b> <%= @user.username %>  </p>
+                        <p> <b> Phone </b> <%= @user.phone %> </p>
+                        <p> <b> Gender </b> <%= @user.gender %> </p>
+                        <p> <b> Language </b> <%= @user.language %> </p>
+                        <br>
+                        <br>
+                        <br>
+                        <!-- Nav tabs -->
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" class="active"><a href="#now" aria-controls="home" role="tab" data-toggle="tab">현재 진행중인 여행</a></li>
+                            <li role="presentation"><a href="#seminar" aria-controls="profile" role="tab" data-toggle="tab">등록된 모임</a></li>
+                            <li role="presentation"><a href="#enrollmentor" aria-controls="messages" role="tab" data-toggle="tab">멘토 등록</a></li>
+                            <li role="presentation"><a href="#mentees" aria-controls="settings" role="tab" data-toggle="tab">내게 등록한 멘티</a></li>
+                            <li role="presentation"><a href="#setting" aria-controls="settings" role="tab" data-toggle="tab">개인정보 수정</a></li>
+                        </ul>
+
+                      <!-- Tab panes -->
+                      <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="now">...</div>
+                        <div role="tabpanel" class="tab-pane" id="seminar">
+                            <table class="table table-hover">
+                            ...
+                            </table>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="enrollmentor">...</div>
+                        <div role="tabpanel" class="tab-pane" id="mentees">...</div>
+                        <div role="tabpanel" class="tab-pane" id="setting">
+                            <div>
+                            <br>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">비밀번호</label>
+                                <input type="password" class="form-control" id="exampleInputPassword" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">비밀번호 확인</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password Confirmation">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPhonenumber">핸드폰 번호</label>
+                                <input type="text" class="form-control" id="exampleInputPhone" placeholder="Phone">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputFile">프로필 사진</label>
+                                <input type="file" id="exampleInputFile">
+                            </div>
+                            <br>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+         </div>
+        </div>
+      </div>
+    </div>
+</div>
+</div>
