--- a/app/views/home/service.erb
+++ b/app/views/home/service.erb
@@ -4,7 +4,7 @@
      <div class="row"> 
        <div class="col-md-12">
          <div class="col-md-8 col-md-offset-2">
-             <h2 style="color:white"> <center> <br> <b> trip service와 함께 무엇을 할 수 있을까요? </b> </center> </h2>
+             <h2 style="color:white"> <center> <br> trip service와 함께 무엇을 할 수 있을까요? </center> </h2>
                   <br>
                   <br>
                   <div class="col-md-4" style="color:white"> <br>
@@ -44,7 +44,7 @@
      <div class="row"> 
        <div class="col-md-12">
          <div class="col-md-8 col-md-offset-2">
-             <h2> <center> <br> <b> trip service 이용을 도와드립니다 </b> </center> </h2>
+             <h2> <center> <br> trip service 이용을 도와드립니다 </center> </h2>
                   <br>
                   <br>
                   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
